<resources>
    <string name="app_name">Sudoku</string>
    <string name="title" translatable="false">sudoku.</string>
    <string name="new_game">New Game</string>
    <string name="resume">Resume</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_Easy">Easy</string>
    <string name="difficulty_Medium">Medium</string>
    <string name="difficulty_Hard">Hard</string>
    <string name="title_activity_settings">Settings</string>
    <string name="game_won">Game Won</string>
    <string name="game_loss">Game Loss</string>

    <!-- Stats Activity-->
    <string name="title_activity_stats">Statistics</string>
    <string name="games_stats">Games</string>
    <string name="time_stats">Time</string>
    <string name="games_played">Games Played</string>
    <string name="games_won">Games Won</string>
    <string name="win_rate">Win Rate</string>
    <string name="best_time">Best Time</string>
    <string name="average_time">Average Time</string>


    <!-- Info Dialog-->
    <string name="version">version 1.0.0</string>
    <string name="developed">This app is developed by the group \"Daloma\"</string>
    <string name="authors" translatable="false">Lorenzo Pantano\nMatteo D\'Alessandro\nDavide Palleschi</string>
    <string name="mobileprog">For Mobile Programming 2020</string>

    <!-- Loading Dialog-->
    <string name="loading_dialog">Preparing new game</string>

    <!-- Resuming Dialog-->
    <string name="resuming_dialog">Resuming game…</string>

    <!-- Winning Dialog-->
    <string name="winning_dialog">You won the game</string>

    <!-- New Game Error Dialog-->
    <string name="new_game_error_dialog">There was an error retrieving a new puzzle. \nPlease check you internet connection.</string>


    <!-- Preference Titles -->
    <string name="general">General</string>
    <string name="gameSettings">Game Settings</string>
    <string name="stats_no_games_won">No games won</string>
    <string name="stats_no_games_played">No Games Played</string>
    <string name="show_elapsed_time_summary">Starts a counter for the time spent on a game</string>
    <string name="show_elapsed_time">Show Elapsed Time</string>
    <string name="highlight_selected_summary">Highlight selected row and column</string>
    <string name="highlight_selected">Highlight Selected</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="validate">Do you really want to validate?</string>


</resources>
