<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnResume"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="128dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/pantone_classic_blue"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/resume"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/imgbtnInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/pantone_classic_blue"
        android:fontFamily="@font/raleway_semibold"
        android:paddingVertical="25dp"
        android:text="@string/new_game"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnResume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/title"
        android:textColor="@color/pantone_classic_blue"
        android:textSize="66sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNewGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgbtnMenu" />

    <ImageButton
        android:id="@+id/imgbtnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_info_24"
        android:tint="@color/pantone_classic_blue" />

    <ImageButton
        android:id="@+id/imgbtnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_equalizer_24"
        android:tint="@color/pantone_classic_blue" />

    <ImageButton
        android:id="@+id/imgbtnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/pantone_classic_blue"
        app:srcCompat="@drawable/baseline_settings_24" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNewGame"
        app:layout_constraintEnd_toEndOf="parent"
        android:tint="@color/pantone_classic_blue"
        android:backgroundTint="@color/transparent"
        app:srcCompat="@drawable/baseline_arrow_forward_ios_white_24" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNewGame"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_white_24"
        android:tint="@color/pantone_classic_blue"
        android:backgroundTint="@color/transparent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="Easy"
        android:textSize="18sp"
        android:textColor="@color/pantone_classic_blue"
        app:layout_constraintBottom_toTopOf="@+id/btnNewGame"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toEndOf="@+id/imageButton4" />

</androidx.constraintlayout.widget.ConstraintLayout>